# zhipu-free

./: .env.example  .gitignore  README.md  pyproject.toml
.copilot/skills/zhipu-free/: SKILL.md
examples/: demo.py
pages/: free-model.md
tests/: test_client.py
zhipu_free/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  web.py
