[project]
name = "zhipu-free"
version = "0.1.0"
description = "智谱 AI 免费模型整合工具库"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["zhipu", "glm", "ai", "llm", "free"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
zhipu = "zhipu_free.cli:main"

[project.optional-dependencies]
web = [
    "gradio>=5",
]
dev = [
    "pytest>=8",
]
